--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Units Convert</title>
+  <script defer src="index.js"></script>
+  <title>Units Converter</title>
 </head>
 <body>
   <h1>Units Converter</h1>
   <form>
     <div class="group">
-      <div>
-        <input type="number">
-        <label for="">F</label>
+      <div class="unit">
+        <input type="number" id="fahren" placeholder="0">
+        <label for="fahren">F</label>
       </div>
-      <div>
-        <input type="number">
-        <label for="">C</label>
+      <div class="unit">
+        <span id="celsiusOutput">0</span>
+        <label for="celsiusOutput">C</label>
       </div>
     </div>
 
@@ -108,6 +109,5 @@
       </div>
     </div> -->
   </form>
-  <script defer src="index.js"></script>
 </body>
 </html>
