Add function to convert C to F

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       </div>
     </div>
 
+    <div class="group">
+      <div class="unit">
+        <input type="number" id="celsius" placeholder="0">
+        <label for="celsius">C</label>
+      </div>
+      <div class="unit">
+        <span id="fahrenOutput">0</span>
+        <label for="fahrenOutput">F</label>
+      </div>
+    </div>
+
     <!-- <div class="group">
       <div>
         <input type="number">
