Code pruning and add function to convert in to cm

--- a/index.html
+++ b/index.html
@@ -12,38 +12,47 @@
   <form>
     <div class="group">
       <div class="unit">
-        <input type="number" id="fahren" placeholder="0">
-        <label for="fahren">F</label>
+        <input type="number" id="fahrenInput" placeholder="0">
+        <label for="fahrenInput">°F</label>
       </div>
       <div class="unit">
         <span id="celsiusOutput">0</span>
-        <label for="celsiusOutput">C</label>
+        <label for="celsiusOutput">°C</label>
       </div>
     </div>
-
     <div class="group">
       <div class="unit">
-        <input type="number" id="celsius" placeholder="0">
-        <label for="celsius">C</label>
+        <input type="number" id="celsiusInput" placeholder="0">
+        <label for="celsiusInput">°C</label>
       </div>
       <div class="unit">
         <span id="fahrenOutput">0</span>
-        <label for="fahrenOutput">F</label>
+        <label for="fahrenOutput">°F</label>
+      </div>
+    </div>
+    <div class="group">
+      <div class="unit">
+        <input type="number" id="inchInput" placeholder="0">
+        <label for="inchInput">in</label>
+      </div>
+      <div class="unit">
+        <span id="cmOutput">0</span>
+        <label for="cmOutput">cm</label>
       </div>
     </div>
 
     <!-- <div class="group">
-      <div>
-        <input type="number">
-        <label for="">in</label>
+      <div class="unit">
+        <input type="number" id="cm" placeholder="0">
+        <label for="cm">cm</label>
       </div>
-      <div>
-        <input type="number">
-        <label for="">cm</label>
+      <div class="unit">
+        <span id="inchOutput">0</span>
+        <label for="inchOutput">in</label>
       </div>
-    </div>
+    </div> -->
 
-    <div class="group">
+    <!-- <div class="group">
       <div>
         <input type="number">
         <label for="">ft</label>
