Display inputs and values in a table

--- a/index.html
+++ b/index.html
@@ -9,37 +9,38 @@
 </head>
 <body>
   <h1>Units Converter</h1>
-  <form>
-    <div class="group">
-      <div class="unit">
+  <table>
+    <tr>
+      <td>
         <input type="number" id="fahrenInput" placeholder="0">
         <label for="fahrenInput">°F</label>
-      </div>
-      <div class="unit">
+      </td>
+      <td>
         <span id="celsiusOutput">0</span>
         <label for="celsiusOutput">°C</label>
-      </div>
-    </div>
-    <div class="group">
-      <div class="unit">
+      </td>
+    </tr>
+    <tr>
+      <td>
         <input type="number" id="celsiusInput" placeholder="0">
         <label for="celsiusInput">°C</label>
-      </div>
-      <div class="unit">
+      </td>
+      <td>
         <span id="fahrenOutput">0</span>
         <label for="fahrenOutput">°F</label>
-      </div>
-    </div>
-    <div class="group">
-      <div class="unit">
+      </td>
+    </tr>
+    <tr>
+      <td>
         <input type="number" id="inchInput" placeholder="0">
         <label for="inchInput">in</label>
-      </div>
-      <div class="unit">
+      </td>
+      <td>
         <span id="cmOutput">0</span>
         <label for="cmOutput">cm</label>
-      </div>
-    </div>
+      </td>
+    </tr>
+  </table>
 
     <!-- <div class="group">
       <div class="unit">
