Add function to convert cm to in

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </td>
       <td>
         <span id="celsiusOutput">0</span>
-        <label for="celsiusOutput">°C</label>
+        <p>°C</p>
       </td>
     </tr>
     <tr>
@@ -27,7 +27,7 @@
       </td>
       <td>
         <span id="fahrenOutput">0</span>
-        <label for="fahrenOutput">°F</label>
+        <p>°F</p>
       </td>
     </tr>
     <tr>
@@ -37,33 +37,22 @@
       </td>
       <td>
         <span id="cmOutput">0</span>
-        <label for="cmOutput">cm</label>
+        <p>cm</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="cmInput" placeholder="0">
+        <label for="cmInput">cm</label>
+      </td>
+      <td>
+        <span id="inchOutput">0</span>
+        <p>in</p>
       </td>
     </tr>
   </table>
 
-    <!-- <div class="group">
-      <div class="unit">
-        <input type="number" id="cm" placeholder="0">
-        <label for="cm">cm</label>
-      </div>
-      <div class="unit">
-        <span id="inchOutput">0</span>
-        <label for="inchOutput">in</label>
-      </div>
-    </div> -->
-
-    <!-- <div class="group">
-      <div>
-        <input type="number">
-        <label for="">ft</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">m</label>
-      </div>
-    </div>
-
+    <!--
     <div class="group">
       <div>
         <input type="number">
