Add function to convert ft to m and fixed values to 2 decimals

--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
         <p>in</p>
       </td>
     </tr>
+    <tr>
+      <td>
+        <input type="number" id="ftInput" placeholder="0">
+        <label for="ftInput">ft</label>
+      </td>
+      <td>
+        <span id="mOutput">0</span>
+        <p>m</p>
+      </td>
+    </tr>
   </table>
 
     <!--
