Add function to convert m to ft

--- a/index.html
+++ b/index.html
@@ -60,19 +60,21 @@
         <p>m</p>
       </td>
     </tr>
+    <tr>
+      <td>
+        <input type="number" id="mInput" placeholder="0">
+        <label for="mInput">m</label>
+      </td>
+      <td>
+        <span id="ftOutput">0</span>
+        <p>ft</p>
+      </td>
+    </tr>
   </table>
 
     <!--
-    <div class="group">
-      <div>
-        <input type="number">
-        <label for="">yd</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">m</label>
-      </div>
-    </div>
+      y to m
+      m to y
 
     <div class="group">
       <div>
