Add function to convert y to m and m to y

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>°F</p>
       </td>
     </tr>
+
     <tr>
       <td>
         <input type="number" id="inchInput" placeholder="0">
@@ -50,6 +51,7 @@
         <p>in</p>
       </td>
     </tr>
+
     <tr>
       <td>
         <input type="number" id="ftInput" placeholder="0">
@@ -70,12 +72,30 @@
         <p>ft</p>
       </td>
     </tr>
+
+    <tr>
+      <td>
+        <input type="number" id="yardInput" placeholder="0">
+        <label for="yardInput">y</label>
+      </td>
+      <td>
+        <span id="meterOutput">0</span>
+        <p>m</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="meterInput" placeholder="0">
+        <label for="meterInput">m</label>
+      </td>
+      <td>
+        <span id="yardOutput">0</span>
+        <p>y</p>
+      </td>
+    </tr>
   </table>
 
     <!--
-      y to m
-      m to y
-
     <div class="group">
       <div>
         <input type="number">
