Add function to convert mi to km and mi to km

--- a/index.html
+++ b/index.html
@@ -93,20 +93,30 @@
         <p>y</p>
       </td>
     </tr>
+
+    <tr>
+      <td>
+        <input type="number" id="miInput" placeholder="0">
+        <label for="miInput">mi</label>
+      </td>
+      <td>
+        <span id="kmOutput">0</span>
+        <p>km</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="kmInput" placeholder="0">
+        <label for="kmInput">km</label>
+      </td>
+      <td>
+        <span id="miOutput">0</span>
+        <p>mi</p>
+      </td>
+    </tr>
   </table>
 
     <!--
-    <div class="group">
-      <div>
-        <input type="number">
-        <label for="">mi</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">km</label>
-      </div>
-    </div>
-
     <div class="group">
       <div>
         <input type="number">
