Add additional unit conversions to list

--- a/index.html
+++ b/index.html
@@ -114,52 +114,90 @@
         <p>mi</p>
       </td>
     </tr>
+
+    <tr>
+      <td>
+        <input type="number" id="ozInput" placeholder="0">
+        <label for="ozInput">oz</label>
+      </td>
+      <td>
+        <span id="gOutput">0</span>
+        <p>g</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="gInput" placeholder="0">
+        <label for="gInput">g</label>
+      </td>
+      <td>
+        <span id="ozOutput">0</span>
+        <p>oz</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <input type="number" id="lbInput" placeholder="0">
+        <label for="lbInput">lb</label>
+      </td>
+      <td>
+        <span id="kgOutput">0</span>
+        <p>kg</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="kgInput" placeholder="0">
+        <label for="kgInput">kg</label>
+      </td>
+      <td>
+        <span id="lbOutput">0</span>
+        <p>lb</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <input type="number" id="flOzInput" placeholder="0">
+        <label for="flOzInput">fl oz</label>
+      </td>
+      <td>
+        <span id="mlOutput">0</span>
+        <p>ml</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="mlInput" placeholder="0">
+        <label for="mlInput">ml</label>
+      </td>
+      <td>
+        <span id="flOzOutput">0</span>
+        <p>fl oz</p>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        <input type="number" id="galInput" placeholder="0">
+        <label for="galInput">gal</label>
+      </td>
+      <td>
+        <span id="lOutput">0</span>
+        <p>L</p>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <input type="number" id="lInput" placeholder="0">
+        <label for="lInput">L</label>
+      </td>
+      <td>
+        <span id="galOutput">0</span>
+        <p>gal</p>
+      </td>
+    </tr>
   </table>
-
-    <!--
-    <div class="group">
-      <div>
-        <input type="number">
-        <label for="">oz</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">g</label>
-      </div>
-    </div>
-
-    <div class="group">
-      <div>
-        <input type="number">
-        <label for="">lb</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">kg</label>
-      </div>
-    </div>
-
-    <div class="group">
-      <div>
-        <input type="number">
-        <label for="">fl oz</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">ml</label>
-      </div>
-    </div>
-
-    <div class="group">
-      <div>
-        <input type="number">
-        <label for="">gal</label>
-      </div>
-      <div>
-        <input type="number">
-        <label for="">l</label>
-      </div>
-    </div> -->
-  </form>
 </body>
 </html>
