Add legend to define units

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <title>Units Converter</title>
 </head>
 <body>
-  <h1>Units Converter</h1>
   <table>
+    <tr id="title">
+      <th colspan="2">Units Converter</th>
+    </tr>
     <tr>
       <td>
         <input type="number" id="fahrenInput" placeholder="0">
@@ -197,6 +199,63 @@
         <span id="galOutput">0</span>
         <p>gal</p>
       </td>
+    </tr>
+  </table>
+
+  <table id="legend">
+    <tr>
+      <td class="abrv">°F</td>
+      <td>Fahrenheit</td>
+      <td class="abrv">km</td>
+      <td>kilometer(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">°C</td>
+      <td>Celsius</td>
+      <td class="abrv">oz</td>
+      <td>ounce(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">in</td>
+      <td>inch(es)</td>
+      <td class="abrv">g</td>
+      <td>gram(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">cm</td>
+      <td>centimeter(s)</td>
+      <td class="abrv">lb</td>
+      <td>pound(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">ft</td>
+      <td>feet</td>
+      <td class="abrv">kg</td>
+      <td>kilogram(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">m</td>
+      <td>meter(s)</td>
+      <td class="abrv">fl oz</td>
+      <td>fluid ounce(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">y</td>
+      <td>yard(s)</td>
+      <td class="abrv">ml</td>
+      <td>milliliter(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">m</td>
+      <td>meter(s)</td>
+      <td class="abrv">gal</td>
+      <td>gallon(s)</td>
+    </tr>
+    <tr>
+      <td class="abrv">mi</td>
+      <td>mile(s)</td>
+      <td class="abrv">l</td>
+      <td>liter(s)</td>
     </tr>
   </table>
 </body>
