Add remaining functions to convert units

--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
         <label for="galInput">gal</label>
       </td>
       <td>
-        <span id="lOutput">0</span>
+        <span id="litersOutput">0</span>
         <p>L</p>
       </td>
     </tr>
     <tr>
       <td>
-        <input type="number" id="lInput" placeholder="0">
-        <label for="lInput">L</label>
+        <input type="number" id="litersInput" placeholder="0">
+        <label for="litersInput">L</label>
       </td>
       <td>
         <span id="galOutput">0</span>
